# Project-Newcomb

./: .gitignore  README.md  codecov_recent.md  coin-learning.ipynb  gitingest.txt  pyproject.toml  pytest.ini  sample_test_coverage.md  verify_state_dependent.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  test.yml
docs/: ai_safety_gridworlds_ib_analysis.md  ibrl_missing_features.md  infrabayesian_primer.md  reward_spec_and_tomato_experiment_plan.md  state_dependent_policy_plan.md  trap_bandit_experiment.md  trap_bandit_implementation_plan.md
experiments/Clement/: coin_tossing_game_toy
experiments/agent_comparison_sweep/: Makefile  README.md
experiments/alaro/: IBComparison.ipynb  __init__.py  (+2 more)
ibrl/: README.md  outcome.py
tests/: conftest.py  gitingest.txt  test_agents.py  test_agents_extended.py  test_baselines.py  test_belief_dependent_agent.py  test_belief_policy.py  test_construction.py  test_correctness_convergence.py  test_correctness_properties.py  test_environments.py  test_environments_extended.py  test_gridworld.py  test_heavy_tailed_bandit.py  test_ib_world_model.py  test_infrabayesian_basic.py  test_infrabayesian_beliefs.py  test_interval_belief.py  test_joint_bandit_world_model.py  test_knightian_uncertainty.py  test_mdp_agents.py  test_simple_iucb_agent.py  test_simulator.py  test_simulator_multi_episode.py  test_smoke.py  test_solve_game.py  test_stateful_policy.py  test_supra_pomdp_agent.py  test_supra_pomdp_integration.py  test_supra_pomdp_smoke.py  test_supra_pomdp_world_model.py  test_trap_bandit_experiment.py  test_value_iteration.py
(+162 files in other folders)
